added some values

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,19 @@
 <resources>
   <color name="defaultTextColor">@android:color/black</color>
   <color name="defaultBackgroundColor">@android:color/transparent</color>
+
+  <color name="colorPrimary">#3F51B5</color>
+  <color name="colorPrimaryDark">#303F9F</color>
+  <color name="colorAccent">#57FFB3</color>
+
+  <!-- Screens background color-->
+  <color name="bg_slider">#3D3D7A</color>
+
+  <!-- dots inactive colors -->
+  <color name="dot_dark">#d1395c</color>
+
+  <!-- dots active colors -->
+  <color name="dot_light">#f98da5</color>
+
+
 </resources>
