--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -42,7 +42,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_pager"
-        android:layout_marginBottom="40dp">
+        android:layout_marginBottom="@dimen/dots_margin_bottom">
 
     </LinearLayout>
 
