--- a/app/src/main/res/layout/welcome_slide1.xml
+++ b/app/src/main/res/layout/welcome_slide1.xml
@@ -21,6 +21,7 @@
             android:layout_height="match_parent"
             android:layout_margin="20dp"
             android:layout_marginBottom="10dp"
+            android:contentDescription="@string/screen_shot"
             app:srcCompat="@drawable/simulator_screen_shot_iphone_x" />
 
     </LinearLayout>
