--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <dimen name="google_1x">8dp</dimen>
+
+  <dimen name="dots_height">30dp</dimen>
+  <dimen name="dots_margin_bottom">20dp</dimen>
+  <dimen name="slide_title">30dp</dimen>
+  <dimen name="slide_desc">16dp</dimen>
+  <dimen name="desc_padding">40dp</dimen>
 </resources>
