added back button in ActionBar

--- a/app/src/main/res/layout/country_list_item.xml
+++ b/app/src/main/res/layout/country_list_item.xml
@@ -9,7 +9,9 @@
     <TextView
         android:id="@+id/txtViewCountryName"
         android:textSize="20sp"
-        android:paddingLeft="10dp"
+        android:paddingLeft="40dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:layout_height="wrap_content"
         android:layout_width="match_parent" />
 
