--- a/app/src/main/res/layout/activity_phone_number.xml
+++ b/app/src/main/res/layout/activity_phone_number.xml
@@ -6,11 +6,21 @@
     android:layout_height="match_parent"
     android:background="@color/bg_gray">
 
+    <TextView
+        android:id="@+id/info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/advancedPhoneInput"
+        android:text="@string/phone_number_activity_info"
+        android:layout_marginBottom="5dp"
+        android:paddingLeft="17dp"/>
+
+
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/advancedPhoneInput"
         android:layout_width="0dp"
         android:layout_height="72dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="55dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +39,7 @@
 
             <TextView
                 android:id="@+id/alpha2CodeView"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="2dp"
@@ -39,7 +49,7 @@
 
             <TextView
                 android:id="@+id/callingCodesView"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="2dp"
                 android:layout_weight="1"
@@ -49,10 +59,9 @@
 
             <ImageView
                 android:id="@+id/findOnPageNextImageView"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="7dp"
-                android:layout_weight="1"
                 android:tint="@color/pp_purple"
                 app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />
 
@@ -66,8 +75,8 @@
             android:background="@color/bg_gray2"
             android:ems="10"
             android:inputType="phone"
-            tools:layout_editor_absoluteX="152dp"
-            tools:layout_editor_absoluteY="42dp" />
+            android:padding="20dp"
+            app:layout_constraintStart_toEndOf="@+id/countryPrefixView"/>
 
     </LinearLayout>
 
