--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
 
   <color name="colorPrimary">#3F51B5</color>
   <color name="colorPrimaryDark">#303F9F</color>
-  <color name="colorAccent">#57FFB3</color>
+  <color name="colorAccent">#5e5d5d</color>
 
   <!-- Screens background colors-->
   <color name="bg_slider">#3D3D7A</color>
