--- a/app/src/main/res/layout/activity_phone_number.xml
+++ b/app/src/main/res/layout/activity_phone_number.xml
@@ -1,83 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_gray">
 
-    <TextView
-        android:id="@+id/info"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:theme="@style/AppTheme.NoActionBar"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/advancedPhoneInput"
-        android:text="@string/phone_number_activity_info"
-        android:layout_marginBottom="5dp"
-        android:paddingLeft="17dp"/>
-
-
-    <LinearLayout
-        android:id="@+id/advancedPhoneInput"
-        android:layout_width="0dp"
-        android:layout_height="72dp"
-        android:layout_marginTop="55dp"
-        android:orientation="horizontal"
+        android:minHeight="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/content">
 
         <LinearLayout
-            android:id="@+id/countryPrefixView"
-            android:clickable="true"
-            android:onClick="launchListActivity"
-            android:layout_width="115dp"
+            android:id="@+id/toolbar_layout"
+            android:visibility="invisible"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/pp_white"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/alpha2CodeView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="2dp"
-                android:layout_weight="1"
-                android:gravity="end"
-                android:text="GB" />
-
-            <TextView
-                android:id="@+id/callingCodesView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
-                android:layout_weight="1"
-                android:gravity="start"
-                android:text="+44"
-                android:textColor="@color/pp_purple" />
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
 
             <ImageView
-                android:id="@+id/findOnPageNextImageView"
+                android:id="@+id/done_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="7dp"
-                android:tint="@color/pp_purple"
-                app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />
+                app:srcCompat="@drawable/ic_done_black_24dp"
+                android:tint="@android:color/white"
+                android:clickable="true"/>
+
+            <TextView
+                android:id="@+id/done_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Done"
+                android:layout_marginLeft="10dp"
+                android:textColor="@android:color/white"
+                app:layout_constraintStart_toEndOf="@id/done_logo"/>
 
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/bg_gray2"
-            android:ems="10"
-            android:inputType="phone"
-            android:padding="20dp"
-            app:layout_constraintStart_toEndOf="@+id/countryPrefixView"/>
+    </android.support.v7.widget.Toolbar>
 
-    </LinearLayout>
+
+
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+        <TextView
+            android:id="@+id/info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="35dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="17dp"
+            android:text="@string/phone_number_activity_info"
+            app:layout_constraintBottom_toTopOf="@+id/advancedPhoneInput" />
+
+        <LinearLayout
+            android:id="@+id/advancedPhoneInput"
+            android:layout_width="0dp"
+            android:layout_height="72dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/info">
+
+            <LinearLayout
+                android:id="@+id/countryPrefixView"
+                android:layout_width="115dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:clickable="true"
+                android:gravity="center_vertical"
+                android:onClick="launchListActivity"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/alpha2CodeView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:text="GB" />
+
+                <TextView
+                    android:id="@+id/callingCodesView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:layout_weight="1"
+                    android:gravity="start"
+                    android:text="+44"
+                    android:textColor="@color/pp_purple" />
+
+                <ImageView
+                    android:id="@+id/findOnPageNextImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="7dp"
+                    android:tint="@color/pp_purple"
+                    app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                app:layout_constraintStart_toEndOf="@+id/countryPrefixView">
+
+                <EditText
+                    android:id="@+id/editText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:ems="10"
+                    android:padding="15dp"
+                    android:background="@color/bg_gray2"
+                    android:inputType="phone" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
+
 
 </android.support.constraint.ConstraintLayout>
