--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,12 +9,12 @@
 
   <!-- Screens background colors-->
   <color name="bg_slider">#3D3D7A</color>
+  <color name="bg_basic">#6666FF</color>
   <color name="bg_gray">#EBEBF1</color>
   <color name="bg_gray2">#FAFAFA</color>
 
   <!--Other colors-->
   <color name="pp_purple">#7271FF</color>
-  <color name="pp_white">#FFFFFF</color>
 
 
   <!-- dots inactive colors -->
