--- a/app/src/main/res/layout/activity_phone_number.xml
+++ b/app/src/main/res/layout/activity_phone_number.xml
@@ -8,6 +8,7 @@
     <android.support.v7.widget.Toolbar
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:theme="@style/AppTheme.NoActionBar"
+        android:textColor="@android:color/white"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,9 +21,9 @@
 
         <LinearLayout
             android:id="@+id/toolbar_layout"
-            android:visibility="invisible"
+            android:clickable="true"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="?attr/actionBarSize"
             android:orientation="horizontal"
             android:gravity="center_vertical">
 
@@ -31,8 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_done_black_24dp"
-                android:tint="@android:color/white"
-                android:clickable="true"/>
+                android:tint="@android:color/white" />
 
             <TextView
                 android:id="@+id/done_text"
@@ -129,7 +129,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:ems="10"
-                    android:padding="15dp"
+                    android:padding="20dp"
                     android:background="@color/bg_gray2"
                     android:inputType="phone" />
             </LinearLayout>
