--- a/app/src/main/res/layout/activity_sms_code.xml
+++ b/app/src/main/res/layout/activity_sms_code.xml
@@ -29,112 +29,138 @@
         android:textAlignment="center"
         android:textColor="@android:color/white" />
 
-    <LinearLayout
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/text_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="70dp"
-        android:layout_marginRight="70dp">
+        android:layout_marginRight="70dp"
+        android:layout_marginTop="10dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="number"
+            android:maxLength="4"
+            android:textColor="@android:color/transparent"
+            app:layout_constraintTop_toTopOf="@+id/linearLayout"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+            android:background="@android:color/transparent"
+            android:cursorVisible="false"/>
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+            app:layout_constraintTop_toBottomOf="@+id/editText">
 
-            <EditText
-                android:id="@+id/editText1"
+            <TextView
+                android:id="@+id/viewText1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="40dp"
                 android:layout_weight="1"
+                android:background="@android:color/transparent"
                 android:ems="10"
-                android:inputType="number"
                 android:maxLength="1"
                 android:textAlignment="center"
-                android:background="@android:color/transparent"/>
+                android:textColor="@android:color/white" />
 
-            <EditText
-                android:id="@+id/editText2"
+            <TextView
+                android:id="@+id/viewText2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:ems="10"
-                android:inputType="number"
-                android:maxLength="1"
-                android:textAlignment="center"
-                android:layout_weight="1"
-                android:layout_marginRight="10dp"
                 android:layout_marginLeft="5dp"
-                android:background="@android:color/transparent"/>
-
-            <EditText
-                android:id="@+id/editText3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="40dp"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
                 android:ems="10"
-                android:inputType="number"
                 android:maxLength="1"
                 android:textAlignment="center"
-                android:layout_weight="1"
-                android:layout_marginRight="5dp"
+                android:textColor="@android:color/white" />
+
+            <TextView
+                android:id="@+id/viewText3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:background="@android:color/transparent"/>
-
-            <EditText
-                android:id="@+id/editText4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
                 android:layout_marginTop="40dp"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
                 android:ems="10"
-                android:inputType="number"
                 android:maxLength="1"
                 android:textAlignment="center"
-                android:layout_weight="1"
-                android:layout_marginLeft="15dp"
-                android:background="@android:color/transparent"/>
+                android:textColor="@android:color/white" />
 
+            <TextView
+                android:id="@+id/viewText4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="40dp"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:ems="10"
+                android:maxLength="1"
+                android:textAlignment="center"
+                android:textColor="@android:color/white" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/editText"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
             <ImageView
                 android:id="@+id/line1"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:layout_marginRight="10dp"
+                android:layout_weight="1"
                 app:srcCompat="@drawable/text_input_line" />
+
             <ImageView
                 android:id="@+id/line2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
                 app:srcCompat="@drawable/text_input_line" />
+
             <ImageView
                 android:id="@+id/line3"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
                 app:srcCompat="@drawable/text_input_line" />
+
             <ImageView
                 android:id="@+id/line4"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:layout_marginLeft="10dp"
+                android:layout_weight="1"
                 app:srcCompat="@drawable/text_input_line" />
         </LinearLayout>
-    </LinearLayout>
+
+    </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
