--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,8 @@
   <dimen name="slide_title">30dp</dimen>
   <dimen name="slide_desc">16dp</dimen>
   <dimen name="desc_padding">40dp</dimen>
+
+
+
+  <dimen name="passcode_circle_diameter">20dp</dimen>
 </resources>
