--- a/app/src/main/res/layout/activity_phone_number.xml
+++ b/app/src/main/res/layout/activity_phone_number.xml
@@ -22,6 +22,7 @@
         <LinearLayout
             android:id="@+id/toolbar_layout"
             android:clickable="true"
+            android:onClick="launchSmsCodeActivity"
             android:layout_width="wrap_content"
             android:layout_height="?attr/actionBarSize"
             android:orientation="horizontal"
@@ -38,7 +39,7 @@
                 android:id="@+id/done_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Done"
+                android:text="@string/confirmation_code_actionbar"
                 android:layout_marginLeft="10dp"
                 android:textColor="@android:color/white"
                 app:layout_constraintStart_toEndOf="@id/done_logo"/>
@@ -70,7 +71,7 @@
         <LinearLayout
             android:id="@+id/advancedPhoneInput"
             android:layout_width="0dp"
-            android:layout_height="72dp"
+            android:layout_height="82dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +79,7 @@
 
             <LinearLayout
                 android:id="@+id/countryPrefixView"
-                android:layout_width="115dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@android:color/white"
@@ -117,24 +118,26 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/text_input_layout"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                app:errorEnabled="true"
+                android:background="@color/bg_gray2"
                 app:layout_constraintStart_toEndOf="@+id/countryPrefixView">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/editText"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:ems="10"
-                    android:padding="20dp"
-                    android:background="@color/bg_gray2"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:inputType="phone" />
-            </LinearLayout>
+
+            </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
+
     </android.support.constraint.ConstraintLayout>
 
 
