minor bug in BottomNavigationView solved

--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -22,5 +22,6 @@ android:layout_height="match_parent">
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:background="?android:attr/windowBackground"
+    app:itemBackground="?android:attr/windowBackground"
     app:menu="@menu/navigation"/>
 </RelativeLayout>
