--- a/app/src/main/res/layout/activity_passcode.xml
+++ b/app/src/main/res/layout/activity_passcode.xml
@@ -8,6 +8,44 @@
     android:background="@color/bg_basic"
     android:gravity="center_horizontal">
 
+    <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:theme="@style/AppTheme.NoActionBar"
+        android:textColor="@android:color/white"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        app:titleTextColor="@android:color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/content">
+
+        <LinearLayout
+            android:id="@+id/toolbar_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="?attr/actionBarSize"
+            android:clickable="true"
+            android:padding="15dp"
+            android:layout_gravity="right"
+            android:gravity="center_vertical"
+            android:onClick="launchSmsCodeActivity"
+            android:orientation="horizontal">
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:indeterminateDrawable="@drawable/custom_progress_loader"
+                android:indeterminate="true"/>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.Toolbar>
+
     <TextView
         android:id="@+id/titleTextView"
         android:layout_marginTop="90dp"
