--- a/app/src/main/res/layout/account_tab.xml
+++ b/app/src/main/res/layout/account_tab.xml
@@ -28,25 +28,28 @@ tools:context=".AccountFragment">
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:layout_collapseMode="parallax"/>
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/toolbar_constraint_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal"
-            android:fitsSystemWindows="true"
-            app:layout_collapseMode="pin">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:fitsSystemWindows="true"
+                android:orientation="vertical"
+                app:layout_collapseMode="pin"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/tabs">
 
                 <TextView
                     android:id="@+id/currency_name"
-                    android:textSize="30sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/bits" />
+                    android:text="@string/bits"
+                    android:textSize="30sp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -56,32 +59,33 @@ tools:context=".AccountFragment">
 
                     <TextView
                         android:id="@+id/currency_balance_units"
-                        android:textSize="10sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/bits_unit" />
+                        android:text="@string/bits_unit"
+                        android:textSize="10sp" />
 
                     <TextView
                         android:id="@+id/currency_balance"
-                        android:textSize="10sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="-.--" />
+                        android:text="-.--"
+                        android:textSize="10sp"/>
 
                 </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="bottom"
+                android:elevation="2dp"
+                app:tabMode="scrollable"
+                app:tabContentStart="72dp"
+                app:layout_constraintBottom_toBottomOf="@+id/toolbar_constraint_layout"/>
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="bottom"
-            android:elevation="2dp"
-            app:tabMode="scrollable"
-            app:tabContentStart="72dp" />
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.design.widget.CollapsingToolbarLayout>
 
