--- a/app/src/main/res/layout/account_info_tab.xml
+++ b/app/src/main/res/layout/account_info_tab.xml
@@ -22,27 +22,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="match_parent"
         android:background="@android:color/white">
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@android:color/white">
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/bg_gray">
-
-        <TextView
-            android:id="@+id/latest_transactions_header_text"
-            android:padding="10dp"
-            android:textSize="15sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/latest_transactions_header" />
-    </RelativeLayout>
 </LinearLayout>
