--- a/app/src/main/res/layout/transaction_list_item.xml
+++ b/app/src/main/res/layout/transaction_list_item.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:paddingTop="10dp"
+
+    android:paddingTop="15dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:orientation="vertical">
@@ -12,29 +13,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/title_text"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="TextView"
+                android:textSize="20dp"
+                android:textColor="@android:color/black"
                 app:layout_constraintBottom_toTopOf="@+id/textView4"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/address_text"
-                android:layout_width="wrap_content"
+                android:id="@+id/amount_text"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="TextView"
-                app:layout_constraintBottom_toTopOf="@+id/textView5"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                android:gravity="right"
+                android:text="TextView" />
+
+
 
         </LinearLayout>
 
@@ -46,10 +52,14 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/amount_text"
-                android:layout_width="wrap_content"
+                android:id="@+id/address_text"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                app:layout_constraintBottom_toTopOf="@+id/textView5"
+                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+
         </LinearLayout>
 
     </LinearLayout>
