--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,24 +3,26 @@
   <color name="defaultTextColor">@android:color/black</color>
   <color name="defaultBackgroundColor">@android:color/transparent</color>
 
-  <color name="colorPrimary">#3F51B5</color>
+  <color name="colorPrimary">#3f51b5</color>
   <color name="colorPrimaryDark">#303F9F</color>
   <color name="colorAccent">#565656</color>
 
   <!-- Screens background colors-->
   <color name="bg_slider">#3D3D7A</color>
-  <color name="bg_basic">#6666FF</color>
+  <color name="bg_basic">#6666ff</color>
   <color name="bg_gray">#EBEBF1</color>
   <color name="bg_gray2">#FAFAFA</color>
 
   <!--Other colors-->
-  <color name="pp_purple">#7271FF</color>
+  <color name="pp_purple">#7271ff</color>
 
   <!-- dots inactive colors -->
   <color name="dot_dark_slider">#ffffff</color>
 
   <!-- dots active colors -->
   <color name="dot_light_slider">#7271FF</color>
+  <color name="PayPro_Line">#c8c7cc</color>
+    <color name="PayPro_Background">#efeff4</color>
 
 
 </resources>
