--- a/app/src/main/res/layout/settings_tab.xml
+++ b/app/src/main/res/layout/settings_tab.xml
@@ -40,7 +40,7 @@
                     android:contentDescription="@string/todo" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/nicknameSettings"
                     android:height="76dp"
                     android:gravity="center_vertical"
                     android:text="@string/nickname" />
