--- a/app/src/main/res/layout/account_info_tab.xml
+++ b/app/src/main/res/layout/account_info_tab.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scroll"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -55,7 +59,8 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:orientation="horizontal"
-            android:clickable="true">
+            android:clickable="true"
+            android:focusable="true">
 
 
             <TextView
@@ -85,3 +90,4 @@
     </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
