--- a/app/src/main/res/layout/profile_view.xml
+++ b/app/src/main/res/layout/profile_view.xml
@@ -6,10 +6,35 @@
     android:layout_height="match_parent"
     android:background="@color/app_ico_background">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/PayPro_Blue"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/backButtonToolbar"
+        android:layout_width="wrap_content"
+        android:layout_height="56dp"
+        android:background="@color/defaultBackgroundColor"
+        android:contentDescription="@string/todo"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:tint="@color/ic_launcher_background"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="?attr/actionModeCloseDrawable"
+        tools:layout_editor_absoluteX="0dp" />
+
     <RelativeLayout
         android:id="@+id/avatarLayout"
         android:layout_width="match_parent"
         android:layout_height="76dp"
+        android:layout_marginTop="56dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -22,6 +47,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginTop="10dp"
+            android:contentDescription="@string/todo"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:srcCompat="@drawable/default_profile"
@@ -32,10 +58,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_below="@+id/imageView2"
+            android:layout_below="@+id/avatarProfileView"
             android:layout_centerHorizontal="true"
             android:background="@color/defaultBackgroundColor"
-            android:text="Edit"
+            android:contentDescription="@string/todo"
+            android:text="@string/edit"
             android:textColor="@color/PayPro_Blue" />
 
     </RelativeLayout>
@@ -70,7 +97,7 @@
                     android:height="30dp"
                     android:gravity="center_vertical"
                     android:paddingLeft="15dp"
-                    android:text="Nickname" />
+                    android:text="@string/nickname" android:paddingStart="15dp" />
             </TableRow>
 
             <TableRow
@@ -91,9 +118,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
                     android:height="44dp"
+                    android:contentDescription="@string/nickname"
                     android:gravity="center_vertical"
-                    android:text="Nickname"
-                    android:textColor="@android:color/black" />
+                    android:text="@string/nickname"
+                    android:textColor="@android:color/black" android:layout_marginStart="15dp" />
 
                 <RelativeLayout
                     android:layout_width="0dp"
