--- a/app/src/main/res/layout/contacts_list_item.xml
+++ b/app/src/main/res/layout/contacts_list_item.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
+    android:paddingLeft="15dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    android:paddingRight="15dp"
     android:orientation="horizontal"
     android:clickable="true">
 
     <ImageView
         android:id="@+id/contact_photo"
-        android:layout_width="120dp"
-        android:padding="10dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        app:srcCompat="@drawable/default_profile" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,8 +29,8 @@
         <TextView
             android:id="@+id/contact_name"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:lines="1"
             android:gravity="center_vertical"
             android:text="John Smith"
             android:layout_gravity="center_vertical"
@@ -36,11 +40,11 @@
         <TextView
             android:id="@+id/contact_number"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
             android:paddingLeft="8dp"
+            android:lines="1"
             android:text="+34 123 45 67 89"
             android:textColor="@android:color/black"
             android:textSize="13sp" />
