--- a/app/src/main/res/layout/contacts_list_item.xml
+++ b/app/src/main/res/layout/contacts_list_item.xml
@@ -13,11 +13,24 @@
     android:orientation="horizontal"
     android:clickable="true">
 
-    <ImageView
-        android:id="@+id/contact_photo"
+    <FrameLayout
         android:layout_width="45dp"
-        android:layout_height="45dp"
-        app:srcCompat="@drawable/default_profile" />
+        android:layout_height="45dp">
+
+        <ImageView
+            android:id="@+id/contact_photo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/default_profile" />
+
+        <ImageView
+            android:id="@+id/pp_logo"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_gravity="bottom|right"
+            android:visibility="gone"
+            app:srcCompat="@drawable/logo_alone" />
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
